--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -1,34 +1,24 @@
-<ng-container *ngIf="!isDropdownOpen">
-  <ng-template [ngTemplateOutlet]="select"></ng-template>
-</ng-container>
-<ng-template #select>
-  <div class="flex items-center border-dark border-[1px] border-solid cursor-pointer
-    rounded bg-light dark:bg-dark text-dark dark:text-light w-full px-[5px] gap-[5px] h-[var(--select-height)]
-    select-none" (click)="toggleDropdown()">
-    <div class="grow text-left">
+<div class="relative w-full">
+  <div class="flex items-center border-dark border-[1px] border-solid rounded-[5px]
+    w-full px-[5px] h-control select-none group-focus/select:ring bg-light dark:bg-dark text-dark dark:text-light" (click)="toggleDropdown()">
+    <span class="grow text-left">
       <ng-container *ngIf="selectLabel; else placeholderTemplate">{{selectLabel}}</ng-container>
       <ng-template #placeholderTemplate>
         {{placeholder}}
       </ng-template>
-    </div>
-    <fa-icon [icon]="faTimesCircle" *ngIf="selectLabel" (click)="clearSelection($event)" class=""></fa-icon>
-    <fa-icon [icon]="faCaretDown" *ngIf="!isDropdownOpen"></fa-icon>
-    <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
-  </div>
-</ng-template>
-<ng-template mlDismissableModal [(isOpen)]="isDropdownOpen" (isOpenChange)="handleDropdownClose($event)" [useAppRootVcr]="false">
-  <div class="fixed w-[var(--select-width)] top-[var(--select-top)] left-[var(--select-left)]">
-    <ng-container [ngTemplateOutlet]="select"></ng-container>
-    <div class="mt-[5px] select-none">
-      <ng-container [ngTemplateOutlet]="group"></ng-container>
+    </span>
+    <div class="inline-flex gap-[5px]">
+      <fa-icon [icon]="faTimesCircle" *ngIf="selectLabel" (click)="clearSelection($event)" class=""></fa-icon>
+      <fa-icon [icon]="faCaretDown" *ngIf="!isDropdownOpen"></fa-icon>
+      <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
     </div>
   </div>
-</ng-template>
-<ng-template #group>
-  <ul role="group" class="border-dark dark:border-light border-[1px] border-solid rounded bg-light 
-  dark:bg-dark text-dark dark:text-light p-[1px]">
-    <ng-container *ngFor="let option of options">
-      <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
-    </ng-container>
-  </ul>
-</ng-template>
+  <div class="mt-[5px] select-none w-full z-[1000] absolute" *ngIf="isDropdownOpen">
+    <ul role="group" class="border-dark dark:border-light border-[1px] border-solid rounded-[5px]
+      p-[1px] bg-light dark:bg-dark text-dark dark:text-light">
+      <ng-container *ngFor="let option of options">
+        <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
+      </ng-container>
+    </ul>
+  </div>
+</div>
