--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -18,7 +18,7 @@
 </div>
 <ng-template #dropdown>
   <div class="mt-[5px] select-none w-[var(--dropdown-width)]" [ngStyle]="getDropdownVariables()" tabindex="0" 
-    (mouseenter)="handleMouseEnter()" (mouseleave)="handleMouseLeave()" (blur)="handleDropdownBlur($event)">
+    (mouseenter)="handleMouseEnter()" (mouseleave)="handleMouseLeave()" (focusout)="handleFocusOut($event)">
     <ul role="group" class="border-dark dark:border-light border-[1px] border-solid rounded-[5px]
       p-[1px] bg-light dark:bg-dark text-dark dark:text-light">
       <ng-container *ngFor="let option of options">
