--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -20,7 +20,7 @@
   <div class="mt-[5px] select-none w-[var(--dropdown-width)] border-dark dark:border-light border-[1px] border-solid rounded-[5px]
     p-[1px] bg-light dark:bg-dark text-dark dark:text-light" [ngStyle]="getDropdownVariables()" tabindex="0" 
     (mouseenter)="handleMouseEnter()" (mouseleave)="handleMouseLeave()" (focusout)="handleFocusOut($event)">
-    <ng-template mlSelectSearchTemplate></ng-template>
+    <ng-container mlSelectSearchTemplate></ng-container>
     <div class="h-[var(--dropdown-options-height)] overflow-auto {{dropdownOptionsHeightVarClass}}">
       <ul role="group" class="">
         <ng-container *ngFor="let option of options">
