--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -21,7 +21,7 @@
     p-[1px] bg-light dark:bg-dark text-dark dark:text-light" [ngStyle]="getDropdownVariables()" tabindex="0" 
     (mouseenter)="handleMouseEnter()" (mouseleave)="handleMouseLeave()" (focusout)="handleFocusOut($event)">
     <ng-container mlSelectSearchTemplate></ng-container>
-    <div class="h-[var(--dropdown-options-height)] overflow-auto {{dropdownOptionsHeightVarClass}}">
+    <div class="max-h-[var(--dropdown-options-height)] overflow-auto {{dropdownOptionsHeightVarClass}}">
       <ul role="group" class="">
         <ng-container *ngFor="let option of options">
           <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
