--- a/media-library/libs/ml-ui/src/lib/controls/select/select-dropdown-content/select-dropdown-content.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select-dropdown-content/select-dropdown-content.component.html
@@ -1,23 +1,19 @@
-<div class="">
-  <ng-container *ngIf="options">
-    <ul role="group">
-      <ng-container *ngFor="let option of options">
-        <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
-      </ng-container>
-    </ul>
-  </ng-container>
-  <ng-container *ngIf="groups">
-    <ul role="listbox">
-      <ng-container *ngFor="let group of groups">
-        <li role="group">
-          <div mlLabel>{{group.name}}</div>
-          <ul role="presentation">
-            <ng-container *ngFor="let option of group.options">
-              <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
-            </ng-container>
-          </ul>
-        </li>
-      </ng-container>
-    </ul>
-  </ng-container>
-</div>
+<ng-container *ngIf="options">
+  <ul role="group">
+    <ng-container *ngFor="let option of options">
+      <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
+    </ng-container>
+  </ul>
+</ng-container>
+<ng-container *ngIf="groups">
+  <ul role="listbox">
+    <li role="group" *ngFor="let group of groups">
+      <div mlLabel>{{group.name}}</div>
+      <ul role="presentation">
+        <ng-container *ngFor="let option of group.options">
+          <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
+        </ng-container>
+      </ul>
+    </li>
+  </ul>
+</ng-container>
