--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -21,6 +21,6 @@
     p-[1px] bg-light dark:bg-dark text-dark dark:text-light" [ngStyle]="getDropdownVariables()" tabindex="0" 
     (mouseenter)="handleMouseEnter()" (mouseleave)="handleMouseLeave()" (focusout)="handleFocusOut($event)">
     <ng-container mlSelectSearchTemplate></ng-container>
-    <ml-select-dropdown-content></ml-select-dropdown-content>
+    <ml-select-dropdown-content [config]="dropdownConfig"></ml-select-dropdown-content>
   </div>
 </ng-template>
