added music padding

--- a/media-library/libs/ml-ui/src/lib/controls/tab/tab-group/tab-group.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/tab/tab-group/tab-group.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col px-[10px]">
+<div class="flex flex-col">
   <div class="flex basis-auto">
     <div *ngFor="let tab of tabs" class="flex items-center h-tab cursor-pointer px-[10px]" 
       [ngClass]="{ 
