ag-grid changes

--- a/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
@@ -2,5 +2,6 @@
   class="ag-theme-quartz w-auto"
   [rowData]="songs"
   [columnDefs]="colDefs"
-  [domLayout]="'autoHeight'">
+  [domLayout]="'autoHeight'"
+  [pagination]="true">
 </ag-grid-angular>
