--- a/media-library/libs/ml-ui/src/lib/music/cell-renderers/song-options-cell-renderer/song-options-cell-renderer.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/cell-renderers/song-options-cell-renderer/song-options-cell-renderer.component.html
@@ -1,8 +1,8 @@
 <div class="inline-flex gap-[5px]">
-  <button mlButton>
+  <button mlButton (click)="edit()">
     <fa-icon [icon]="faEdit"></fa-icon>
   </button>
-  <button mlButton>
+  <button mlButton (click)="addToPlaylist()">
     <fa-icon [icon]="faPlus"></fa-icon>
   </button>
 </div>
