--- a/media-library/libs/ml-ui/src/lib/music/modals/add-to-playlist-modal/add-to-playlist-modal.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/modals/add-to-playlist-modal/add-to-playlist-modal.component.html
@@ -1,8 +1,13 @@
 <ml-modal-content class="w-[450px]">
   <ml-modal-header>
-    <ml-modal-title>Add To Playlist</ml-modal-title>
+    <ml-modal-title>
+      <div class="flex">Add&nbsp;<div class="truncate">{{song?.title}}</div>&nbsp;To&nbsp;Playlist(s)</div>
+    </ml-modal-title>
   </ml-modal-header>
   <ml-modal-body>
-    <ml-list-box [items]="playlistItems" [(ngModel)]="selectedPlaylistIds" (ngModelChange)="handleListBoxChange($event)"></ml-list-box>
+    <ml-list-box [items]="playlistItems" [(ngModel)]="selectedPlaylistIds" #listbox></ml-list-box>
   </ml-modal-body>
+  <ml-modal-footer class="flex justify-end">
+    <button mlButton (click)="handleSave(listbox.value)" [disabled]="!listbox.isDirty">Save</button>
+  </ml-modal-footer>
 </ml-modal-content>
